# osp-logbook

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  HERMES_PLAN.md  LICENSE  README.md  alembic.ini  app.py  base.html  base_mobile.html  coverage.json  dashboard.html  fuel.html  gunicorn.conf.py  logbook.db  login.html  logs.html  maintenance.html  print_vehicle_log.html  pyproject.toml  pytest.ini  render.yaml  report.html  report.py  requirements.txt  run.py  schema.sql  trips.html  users.html  vehicles.html
alembic/: env.py
backend/: bootstrap.py  config.py  db.py  helpers.py
migrations/: 0001_baseline.py  0001_initial.py  0002_indexes.py  0003_audit_log.py  0004_dates_to_native_date.py  0005_admin_bootstrap_and_indexes.py  0006_remove_active_column.py  0007_trip_times.py  0008_equipment.py  0009_trip_equipment.py  0010_audit_log_created_at_index.py  0011_composite_indexes.py
scripts/: apply_schema.py  osp-backup.sh  osp-health.sh
static/: app.js  login.css  main.css  manifest.json  mobile.css  sw.js
templates/: base.html  base_mobile.html  dashboard.html  equipment.html  equipment_edit.html  error.html  fuel.html  login.html  logs.html  maintenance.html  more.html  print_vehicle_log.html  report.html  trips.html  users.html  vehicle_edit.html  vehicles.html
tests/: conftest.py  test_add_fuel_use_case.py  test_add_trip_use_case.py  test_admin.py  test_admin_crud.py  test_api.py  test_api_extended.py  test_app.py  test_audit_service.py  test_auth.py  test_bootstrap.py  test_cache_extended.py  test_cache_service.py  test_config.py  (+29 more)
(+53 files in other folders)
